fixes wierd jumping issue

--- a/ui/nozerodays/style.css
+++ b/ui/nozerodays/style.css
@@ -46,21 +46,6 @@ td:nth-last-child(2) {
 tr:hover {
   background-color: var(--highlight-color);
 }
-td,
-th {
-  position: relative;
-}
-td:hover::after,
-th:hover::after {
-  content: "";
-  position: absolute;
-  background-color: var(--highlight-color);
-  left: 0;
-  top: -5000px;
-  height: 10000px;
-  width: 100%;
-  z-index: -1;
-}
 
 a:hover {
   cursor: pointer;
